# tool-fabrication-rate

./: .gitignore  ADDENDUM_R1.md  LOOP_PLAN.md  PAPER_PLAN.md  PAPER_PLAN_v2.md  PAPER_PLAN_v3.1.md  PAPER_PLAN_v3.md  PROGRESS.md  README.md  REVISION_SPEC.md
.claude/: ralph-loop.local.md
PHASE0/: REVIEW_phase0.md  dataset_status.md  mlx_feasibility.md  mlx_probe.py  mlx_probe_output.txt  mlx_probe_results.json  model_ids.md  prior_art.md  related_work_notes.md  scale_call_audit.md  scale_call_audit_v2.md
PHASE0/REVIEWS/: R1_adversarial.md  R1_icml_area_chair.md  R1_neurips_method.md  R1_reproducibility.md  R1_scale_workshop.md  R1_statistics.md  R1_synthesis.md  R2_anonymization_ethics.md  R2_industry_practitioner.md  R2_novelty_stickler.md  R2_ood_skeptic.md  R2_synthesis.md  R2_theory.md  R2_three_line_skim.md  R3_adversarial_final.md  R3_code_quality.md  R3_consistency_audit.md  R3_meta_reviewer.md  R3_synthesis.md  R4_aggressive_skeptic.md  R4_brutally_honest_AC.md  (+4 more)
harness/: HARNESS_SPEC.md  README.md  cost_meter.py  pyproject.toml  registry.py  repro_manifest.py  trace_logger.py  types.py
harness/adapters/: anthropic_adapter.py  base.py  mlx_adapter.py  openai_adapter.py
harness/bench_loaders/: _tau_user_simulator_haiku.py  bfcl.py  tau_bench.py
harness/intervention/: decoy_list.py  framework_default.py  naive_retry.py  reflect.py  rvr.py
harness/runner/: cli.py  executors.py  loop.py  refusal.py
harness/stats/: __init__.py  bootstrap.py  gap_closure.py  paired_mcnemar.py  probe_friedman.py  tehr.py  tost.py
harness/tests/: test_anthropic_adapter.py  test_bfcl_loader.py  test_cli.py  test_intervention.py  test_logging_cost.py  test_mlx_adapter.py  test_openai_adapter.py  test_runner_executors.py  test_runner_loop.py  test_stats.py  test_tau_bench_loader.py  test_types_registry.py
harness/tests/fixtures/: anthropic_responses.json  mlx_responses.json  openai_responses.json
paper/: icml2026.sty  main.aux  main.bbl  main.blg  main.tex  refs.bib
paper-review-toolkit/: AI_SCRUB.md  INDEX.md  LATEX_TOOLS.md  MULTI_AGENT.md  README.md  REPOS.md  REVIEW_TEMPLATES.md  STYLE_GUIDE.md  SUBMISSION_TOOLS.md  WRITING_TOOLS.md
research/: POSITIONING_v2.md  SECOND_BENCHMARK.md
scripts/: aggregate_all.py  analyze_run.py  analyze_utility.py  dl_quant.sh  fill_placeholders.py  make_arch_figure.py  make_clean_figures.py  make_figures.py  make_new_figures.py  make_probe_figure.py  regen_appendix_figures.py  regen_body_figures.py  run_breadth.sh  run_final.sh  run_final2.sh  run_frontier.sh  run_lean.sh  run_mt.sh  run_mt2.sh  run_overnight2.sh  run_powered.sh  run_probe.py  run_queue.sh  run_queue2.sh  run_queue3.sh  run_registry_size.py  run_stats.py  run_stats_full.py  run_stretch.sh  run_tau_grid.sh  run_tau_lean.sh  watchdog.sh  watchdog_daemon.sh
(+165 files in other folders)
