[project]
name = "tehr-harness"
version = "0.1.0"
description = "TEHR experimental harness for the SCALE @ ICML 2026 submission."
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
readme = "README.md"

# Pinned per ADDENDUM_R1 §D.2 (reproducibility manifest).
dependencies = [
    "anthropic==0.97.0",
    "openai==2.32.0",
    "mlx-lm==0.31.3",
    "mlx==0.31.2",
    "scipy==1.13.1",
    "numpy==1.26.4",
    "statsmodels==0.14.4",
    "scikit-posthocs==0.10.0",
    # pydantic bumped 2.9.0 -> 2.13.4 by the litellm install (τ-bench second
    # benchmark). Full test suite + BFCL/MLX import path re-verified under it.
    "pydantic==2.13.4",
    "python-Levenshtein==0.25.1",
    "huggingface-hub>=1.3.0,<2.0.0",
    # τ-bench user.py transitively imports litellm; we install it import-only
    # (the GPT-4o user simulator is replaced by a Haiku patch, no litellm API use).
    "litellm==1.86.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
]

[project.scripts]
# CLI entrypoint owned by Code-D in `harness/runner/cli.py`. Declared here so
# `tehr-run --pilot` is wired the moment that file lands.
tehr-run = "harness.runner.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.uv]
# Maintainer uses uv; lockfile lives next to this pyproject.toml.
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
